# ComfyUI-UniRig

./: .gitignore  README.md  __init__.py  build_inline_viewer.js  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  comfyui_env.toml  detect_blender.py  install.py  install_blender.py  install_unirig.sh  prestartup_script.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  unirig_nodes.py
.github/workflows/: pr-gate.yml  publish.yml  run-tests.yml  test-install.yml  test-linux.yml  test-macos.yml  test-windows.yml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
assets/: mixamo.fbx
assets/animation_characters/: mixamo.fbx
installer/: __init__.py  blender.py  config.py  detector.py  flash_attn.py  requirements.py  spconv.py  torch_geometric.py  utils.py
lib/: blender_export_fbx.py  blender_extract.py  blender_parse_skeleton.py  mia_inference.py  model_cache.py
lib/unirig/: run.py
nodes/: __init__.py  animation.py  auto_rig.py  base.py  comfy-env.toml  direct_export_posed_fbx.py  image_utils.py  load_model.py  mesh_io.py  mia_auto_rig.py  mia_inference.py  mia_model_loader.py  model_loaders.py  orientation_check.py  skeleton_extraction.py  skeleton_io.py  skinning.py
nodes/gpu/: comfy-env.toml
nodes/mia/: model.py  (+3 more)
tests/: conftest.py
utils/: mia_export.py  mia_inference.py
web/: viewer_fbx.html
workflows/: mia_humanoid.json  rig_human.json  rig_human_with_texture.json  skeleton_comparison.json  skeleton_comparison_mixamo_mia_debug.json  unirig.json  unirig_bird.json  unirig_humanoid.json  unirig_wf.json
(+44 files in other folders)
