[project]
name = "ComfyUI-UniRig"
description = "Automatic skeleton extraction for ComfyUI using UniRig (SIGGRAPH 2025)"
version = "1.4.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-UniRig"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "UniRig"
Icon = ""
